--- a/users-style.css
+++ b/users-style.css
@@ -2,6 +2,18 @@
     margin: 0px;
     padding: 0px;
 }
-#Records, #Records tr {
+#Records {
     border: 1px solid black;
+}
+/* #Records th{
+    width: 150px;
+    text-align: left;
+}
+#Records tbody tr{
+    border: 1px solid black;
+} */
+h1{
+    border-bottom: 3px solid black;
+    width: 300px;
+    margin: 10px 0px;
 }
